<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.devibar.champ.Activity.LoginPageActivity">

    <android.support.constraint.ConstraintLayout
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <TextView
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/tvLoginGuardian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_as_guardian"
            android:textColor="@color/colorPrimary"
            android:textSize="30dp"
            android:textStyle="bold"
             />

        <TextView
            android:id="@+id/tvUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            app:layout_constraintTop_toBottomOf="@+id/tvLoginGuardian"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="32dp"
            style="@style/TextViewStyle"
            />

        <EditText
            android:id="@+id/etUsername"
            style="@style/EditTextStyle"
            android:layout_marginTop="7dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvUsername"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_blue_background"

             />

        <TextView
            android:id="@+id/tvPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            app:layout_constraintTop_toBottomOf="@+id/etUsername"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="16dp"
            style="@style/TextViewStyle"
            />

        <EditText
            android:id="@+id/etPassword"
            style="@style/EditTextStyle"
            android:inputType="textPassword"
            android:layout_marginTop="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_blue_background"
            />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/etPassword"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/login"
            style="@style/LoginStyle"
            android:layout_marginTop="32dp"

             />



    </android.support.constraint.ConstraintLayout>


</android.support.constraint.ConstraintLayout>
