<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.devibar.champ.Activity.LoginActivity"
    android:background="#c0cfff">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:src="@drawable/champ_logo"
        android:layout_margin="0dp"
        app:layout_constraintBottom_toTopOf="@+id/btnLoginGuardian" />

    <TextView
        android:layout_width="222dp"
        android:layout_height="35dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-condensed"
        android:text="Champ"
        android:textColor="#212121"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.528"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.454" />


    <Button
        android:layout_marginRight="32dp"
        android:layout_marginLeft="32dp"
        android:id="@+id/btnLoginGuardian"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/login_as_guardian"
        style="@style/LoginStyle"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/btnLoginChild" />

    <Button
        android:layout_marginRight="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginBottom="16dp"
        android:id="@+id/btnLoginChild"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/login_as_child"
        style="@style/ButtonStyle"
        app:layout_constraintBottom_toTopOf="@+id/txtSignUp"

        />

    <TextView
        android:id="@+id/txtSignUp"
        style="@style/TextViewStyle"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_yet_a_user_sign_up"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="80dp" />

</android.support.constraint.ConstraintLayout>
